src/ui/snapshots/rusty_riff__ui__draw__tests__add_pedal_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                               IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇                 ◇ ·                · ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0            MID 0.0          TREBLE 6.5         PRESENCE 4.0        MASTER 5.5     ┃┃     MIC 4.0        BLEND 0.0        ROOM 0.0    ┃
┃                                                                                                                     ┃┃                                                 ┃
┃                                                                                                                     ┃┃                                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────────┐┌ TS-808 ◉ ──────────────────────────────┐┌ SPRING REVERB ◉ ───────────────────────┐┌ + ADD ─────────────────────────────────┐│
││                2.0  3.0                ││              4.5  6.0  7.0             ││              5.5  4.0  2.5             ││                   ＋                    ││
│└────────────────────────────────────────┘└────────────────────────────────────────┘└────────────────────────────────────────┘└────────────────────────────────────────┘│
││├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤││
││SELECT A PEDAL — ←→                          ╔ A D D   P E D A L ═══════════════════════════════════════════════════════╗                                             ││
││                                             ║▶ WHAMMY                                                                  ║                                             ││
││                                             ║  WAH                                                                     ║                                             ││
││                                             ║  COMP                                                                    ║                                             ││
││                                             ║  FUZZ                                                                    ║                                             ││
││                                             ║  DS-1                                                                    ║                                             ││
│└─────────────────────────────────────────────║  ML-2 METAL CORE                                                         ║─────────────────────────────────────────────┘│
└──────────────────────────────────────────────║  PRE-AMP EQ                                                              ║──────────────────────────────────────────────┘
                                               ║  UNI-VIBE                                                                ║                                               
                                               ║  GRAPHIC EQ                                                              ║                                               
                                               ║  PARAMETRIC EQ                                                           ║                                               
                                               ║  FLANGER                                                                 ║                                               
                                               ║  CHORUS                                                                  ║                                               
                                               ║  PHASER                                                                  ║                                               
                                               ║  TREMOLO / VIBRATO                                                       ║                                               
                                               ║  DELAY                                                                   ║                                               
                                               ║                                                                          ║                                               
                                               ║                    ↑/↓ navigate  Enter add  Esc close                    ║                                               
                                               ╚══════════════════════════════════════════════════════════════════════════╝
