src/ui/snapshots/rusty_riff__ui__draw__tests__cab_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                               IN ▐░░░░░░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇                 ◇ ·                · ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0            MID 0.0          TREBLE 6.5         PRESENCE 4.0        MASTER 5.5     ┃┃     MIC 4.0        BLEND 0.0        ROOM 0.0    ┃
┃                                                                                                                     ┃┃                                                 ┃
┃                                                                                                                     ┃┃                                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────────┐┌ TS-808 ◉ ──────────────────────────────┐┌ SPRING REVERB ◉ ───────────────────────┐┌ + ADD ─────────────────────────────────┐│
││                2.0  3.0                ││              4.5  6.0  7.0             ││              5.5  4.0  2.5             ││                   ＋                    ││
│└────────────────────────────────────────┘└────────────────────────────────────────┘└────────────────────────────────────────┘└────────────────────────────────────────┘│
││├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤││
││SELECT A PEDAL — ←→                                                                                                                                                   ││
││                                                             Press 4 for the pedalboard, 1 for the chain.                                                             ││
││                                                                                                                                                                      ││
││                                                                                                                                                                      ││
││                                             ╔ S E L E C T   C A B ═════════════════════════════════════════════════════╗                                             ││
││                                             ║▶ Mesa 4×12 (V30)                                                         ║                                             ││
│└─────────────────────────────────────────────║  Marshall 4×12 (GB)                                                      ║─────────────────────────────────────────────┘│
└──────────────────────────────────────────────║  Orange PPC412 (V30)                                                     ║──────────────────────────────────────────────┘
                                               ║  WEM 4×12 (Fane)                                                         ║                                               
                                               ║  Vox 2×12 (Alnico Blue)                                                  ║                                               
                                               ║  Fender 2×12 (Jensen)                                                    ║                                               
                                               ║  IR: Greenback                                                           ║                                               
                                               ║                                                                          ║                                               
                                               ║                   ↑/↓ navigate  Enter select  Esc close                  ║                                               
                                               ╚══════════════════════════════════════════════════════════════════════════╝
