src/ui/snapshots/rusty_riff__ui__draw__tests__help_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                               IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━╔ K E Y B I N D I N G S ════════════════════════════════════════════════════════════════════╗━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                     ║Panels & chain                                                                             ║                                      ┃
┃         ···                ···      ║  1 / 2 / 3 / 4  focus chain, amp, timeline, pedals (again: hide)                          ║            ···              ···      ┃
┃        · ● ◇              · ● ·     ║  Tab / Shift-Tab  cycle amp/cab (2) or pedals (4) in the panel                            ║           · ● ·            · ● ·     ┃
┃         · ·                · ◇      ║  ←/→  move inside the focused panel                                                       ║            ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0   ║  [ / ]  move the ribbon's stage earlier / later                                           ║0        BLEND 0.0        ROOM 0.0    ┃
┃                                     ║  note  between AMP and CAB = line-level; a full-rig AU is post-mic                        ║                                      ┃
┃                                     ║  Space  bypass stage, pedal, or transport under focus                                     ║                                      ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║Play & edit                                                                                ║▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║  ↑/↓  +/−  knob / adjust value                                                            ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────────║  D  remove pedal from the board                                                           ║──────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────║  A  amp model browser                                                                     ║ADD ─────────────────────────────────┐│
││                2.0  3.0            ║  C  cabinet model browser                                                                 ║                ＋                    ││
│└────────────────────────────────────║  I / X  IR browser / IR bypass                                                            ║─────────────────────────────────────┘│
││├───────────────────────────────────║  O  change audio devices                                                                  ║────────────────────────────────────┤││
││SELECT A PEDAL — ←→                 ║  W  studio-master width: neutral / wide                                                   ║                                     ││
││                                    ║  Z / U  amp-plugin bypass / browser                                                       ║                                     ││
││                                    ║Tools                                                                                      ║                                     ││
││                                    ║  P  preset browser (rig snapshot)                                                         ║                                     ││
││                                    ║  S  save current rig as preset                                                            ║                                     ││
││                                    ║  J  session browser: new / save / save as / load                                          ║                                     ││
│└────────────────────────────────────║  T  chromatic tuner                                                                       ║─────────────────────────────────────┘│
└─────────────────────────────────────║  M  practice metronome (+/− tempo, Space on/off)                                          ║──────────────────────────────────────┘
                                      ║  N  calibrate input level                                                                 ║                                       
                                      ║  V  plugin browser                                                                        ║                                       
                                      ║  R  arm / stop a dry raw take (auto-plays; lands on the timeline)                         ║                                       
                                      ║  Q / Ctrl-C  quit                                                                         ║                                       
                                      ║Panels                                                                                     ║                                       
                                      ║  B  import a track at the playhead (MP3 / WAV / FLAC)                                     ║                                       
                                      ║Preset browser                                                                             ║                                       
                                      ║  ↑/↓  Enter  navigate / apply (audio uninterrupted)                                       ║                                       
                                      ║  S / E / I  save / export / import                                                        ║                                       
                                      ║  D  delete (user presets only)                                                            ║                                       
                                      ║Timeline (focused)                                                                         ║                                       
                                      ║  Space  play / pause (any row)                                                            ║                                       
                                      ║  M  mute the selected track                                                               ║                                       
                                      ║  Enter  jump to start (loop in-point if looped)                                           ║                                       
                                      ║  ↑/↓  ←/→  select row / seek by the step                                                  ║                                       
                                      ║  +/−  seek step: 1 / 5 / 10 / 30 s                                                        ║                                       
                                      ║  G  selected track gain                                                                   ║                                       
                                      ║  H  move selected clip                                                                    ║                                       
                                      ║  E  export unmuted raw takes (WAV)                                                        ║                                       
                                      ║  [ / ]  L  loop in-point / out-point, toggle loop                                         ║                                       
                                      ║  Del  remove selected track                                                               ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                       Esc / K close                                       ║                                       
                                      ╚═══════════════════════════════════════════════════════════════════════════════════════════╝
